Removed dark mode media query from glow button as per latest updates in issue: #1014

--- a/src/components/styles/_glow.less
+++ b/src/components/styles/_glow.less
@@ -22,10 +22,6 @@
     .darkMode();
   }
 
-  @media (prefers-color-scheme: dark) {
-    .darkMode();
-  }
-
   &.blue-btn {
     .glow(@glowBlue);
   }
@@ -59,10 +55,6 @@
 
     [data-theme="dark"] &,
     &.dark-mode {
-      .glow(@glowWhite);
-    }
-
-    @media (prefers-color-scheme: dark) {
       .glow(@glowWhite);
     }
   }
